# bc-mcp-proxy

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  snyk.yml
bc_mcp_proxy/: __init__.py  __main__.py  auth.py  config.py  proxy.py  tools_cache.py
docs/: handleiding-bc-mcp.md
dxt/: README.md  build.ps1  build.sh  manifest.json  requirements.in  requirements.txt
scripts/: diagnose_400.py  dynamic_raw.py  dynamic_walkthrough.py  list_customers.py  smoke_connect.py  v28_raw_probe.py
tests/: test_auth_modes.py  test_auth_refresh.py  test_base_url_validation.py  test_config_whitespace.py  test_device_flow_callback.py  test_nonblocking_discovery.py  test_proxy_error_surfacing.py  test_proxy_prewarm.py  test_proxy_reconnect.py  test_proxy_session_recovery.py  test_proxy_v28_endpoint.py  test_scope_autoswitch.py  test_tools_cache.py
