[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vangelder-bc-mcp-proxy"
version = "0.2.0"
description = "Resilient MCP stdio proxy for Microsoft Dynamics 365 Business Central — fork of microsoft/BCTech BcMCPProxyPython with reconnect, silent token refresh, and surfaced upstream errors."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Stephane Vangelder", email = "stephane@vangeldersolutions.be" }
]
maintainers = [
  { name = "Vangelder Solutions", email = "stephane@vangeldersolutions.be" }
]
keywords = [
  "business-central",
  "dynamics-365",
  "mcp",
  "mcp-proxy",
  "copilot",
  "agent"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Application Frameworks"
]
dependencies = [
  "mcp>=1.21.0",
  "httpx>=0.28.0",
  "msal>=1.34.0",
  "msal-extensions>=1.3.0",
  "exceptiongroup>=1.2.0; python_version < '3.11'"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/vangelderSolutions/bc-mcp-proxy"
Repository = "https://github.com/vangelderSolutions/bc-mcp-proxy"
Issues = "https://github.com/vangelderSolutions/bc-mcp-proxy/issues"
Upstream = "https://github.com/microsoft/BCTech/tree/master/samples/BcMCPProxyPython"


[project.scripts]
bc-mcp-proxy = "bc_mcp_proxy.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bc_mcp_proxy*"]

