[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "360solutions-bc-mcp"
version = "0.5.0"
description = "Resilient MCP stdio proxy for Microsoft Dynamics 365 Business Central — fork of microsoft/BCTech BcMCPProxyPython with reconnect, silent token refresh, and surfaced upstream errors."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Stephane Vangelder", email = "dev@360solutions.be" }
]
maintainers = [
  { name = "360 Solutions", email = "dev@360solutions.be" }
]
keywords = [
  "business-central",
  "dynamics-365",
  "mcp",
  "mcp-proxy",
  "copilot",
  "agent"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Application Frameworks"
]
dependencies = [
  "mcp>=1.21.0",
  "httpx>=0.28.0",
  "msal>=1.34.0",
  "msal-extensions>=1.3.0",
  "exceptiongroup>=1.2.0; python_version < '3.11'",
  # Security pins for transitive dependencies (Snyk-flagged CVEs).
  # See dxt/requirements.txt for the per-pin Snyk advisory IDs and
  # the rationale for exact (==) pins instead of >=.
  "h11==0.16.0",
  "cryptography==46.0.7",
  "pyjwt==2.12.0",
  "python-dotenv==1.2.2",
  "python-multipart==0.0.26",
  "requests==2.33.0",
  "starlette==0.49.1",
  "urllib3==2.6.3"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/360solutionsbe/bc-mcp-proxy"
Repository = "https://github.com/360solutionsbe/bc-mcp-proxy"
Issues = "https://github.com/360solutionsbe/bc-mcp-proxy/issues"
Upstream = "https://github.com/microsoft/BCTech/tree/master/samples/BcMCPProxyPython"


[project.scripts]
360solutions-bc-mcp = "bc_mcp_proxy.__main__:main"
# Legacy alias kept for drop-in compatibility with the upstream Microsoft sample.
bc-mcp-proxy = "bc_mcp_proxy.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bc_mcp_proxy*"]

